.provarCaches/00D5f000005vwGkEAI/objects/rstk__podmdcst__c.object
<CustomObject>
    <description>podmdcst__c</description>
    <fields>
        <fullName>rootstock__podmdcst_component_issue_info__c</fullName>
        <formula>rstk__podmdcst_locid__r.rstk__sylocid_locid__c &amp; &quot;/&quot; &amp;  rstk__podmdcst_locnum__c &amp; IF(ISBLANK( rstk__podmdcst_lotno__c),&quot;&quot;,&quot;/&quot; &amp;  rstk__podmdcst_lotno__c) &amp; &quot;/Qty Issued:&quot; &amp; TEXT(rstk__podmdcst_qtyiss__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Issue Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootstock__podmdcst_issue_loc_info__c</fullName>
        <formula>rstk__podmdcst_locid__r.rstk__sylocid_locid__c &amp; &quot;/&quot; &amp;  rstk__podmdcst_locnum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Issue Location Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__podmdcst_podmd__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstk__podmdcst_seq__c)</formula>
        <inlineHelpText>This is the formula for determining the External ID of this record, which is not used or shown on any Rootstock pages</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__podmdcst_ordno__c + &apos;_&apos; +  TEXT(rstk__podmdcst_lne__c)</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__podmdcst_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos; &apos; +  rstk__podmdcst_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__podmdcst_proj__r.rstk__pjproj_proj__c + &apos; &apos; +  rstk__podmdcst_locid__r.rstk__sylocid_locid__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_comments__c</fullName>
        <inlineHelpText>These are free-form comments associated with this PO Component.</inlineHelpText>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the subcontracted PO Component Item Number that is supplied to the Vendor.</inlineHelpText>
        <label>compitem</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>PO Component Cost</relationshipLabel>
        <relationshipName>PO_Component_Cost1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_condcd__c</fullName>
        <inlineHelpText>The Condition Code associated with this PO component</inlineHelpText>
        <label>CONDCD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Division where the PO Component is controlled.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PO Component Cost (Division)</relationshipLabel>
        <relationshipName>divpodmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_iccontainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Container associated with the Purchase Order Demand.</inlineHelpText>
        <label>Inventory Container</label>
        <referenceTo>rstk__iccontainer__c</referenceTo>
        <relationshipLabel>PO Component Cost</relationshipLabel>
        <relationshipName>podmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The division where this component is inventoried.</inlineHelpText>
        <label>invdiv</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>PO Component Cost (invdiv)</relationshipLabel>
        <relationshipName>PO_Component_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_invsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The site within the specified Division where this component is inventoried.</inlineHelpText>
        <label>invsite</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>PO Component Cost (invsite)</relationshipLabel>
        <relationshipName>PO_Component_Cost1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_itemrev__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the current Engineering Revision of the PO Component.</inlineHelpText>
        <label>itemrev_ui</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>PO Component Cost</relationshipLabel>
        <relationshipName>PO_Component_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_lne__c</fullName>
        <inlineHelpText>This is the PO Line number associated with this PO Component</inlineHelpText>
        <label>LNE</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Location ID associated with this PO Component</inlineHelpText>
        <label>Stock Loc Id</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>PO Component Cost</relationshipLabel>
        <relationshipName>PO_Component_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_locnum__c</fullName>
        <inlineHelpText>This is the Location Number within the selected Location ID associated with this PO Component.</inlineHelpText>
        <label>Stock Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_loctype__c</fullName>
        <inlineHelpText>Location Type.  Consigned, Non-nettable or On-Hand, as identified on the Location ID record.</inlineHelpText>
        <label>loctype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_lotno__c</fullName>
        <inlineHelpText>This is the Lot Number associated with this PO Component.</inlineHelpText>
        <label>LOTNO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ordno__c</fullName>
        <inlineHelpText>This is the PO Number associated with this PO Component</inlineHelpText>
        <label>ORDNO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_podmd__c</fullName>
        <inlineHelpText>PO Demand (Not Used)</inlineHelpText>
        <label>podmd</label>
        <referenceTo>rstk__podmd__c</referenceTo>
        <relationshipLabel>PO Component Cost</relationshipLabel>
        <relationshipName>podmdcsts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Project associated with this PO Component</inlineHelpText>
        <label>proj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>PO Component Cost</relationshipLabel>
        <relationshipName>PO_Component_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_qtyiss__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Total Quantity issued of this PO Component.</inlineHelpText>
        <label>QTYISS</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_seq__c</fullName>
        <inlineHelpText>Sequence Number (Obsolete)</inlineHelpText>
        <label>Sequence Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_seqno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number (Obsolete)</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site associated with this PO Component</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>PO_Component_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_srlno__c</fullName>
        <inlineHelpText>This is the Serial Number associated with this PO Component</inlineHelpText>
        <label>SRLNO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_supsrlno__c</fullName>
        <inlineHelpText>Serial Number</inlineHelpText>
        <label>SUPSRLNO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Freight Cost of the PO Component</inlineHelpText>
        <label>podmdcst_ucstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Labor Cost of the Item</inlineHelpText>
        <label>UCSTLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Material Cost of the PO Component</inlineHelpText>
        <label>UCSTMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Overhead Fringe Cost of the PO Component</inlineHelpText>
        <label>UCSTOHDFRNG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Overhead Labor Cost of the Item</inlineHelpText>
        <label>UCSTOHDLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Overhead Machine Cost of the PO Component</inlineHelpText>
        <label>UCSTOHDMACH</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Overhead Material Cost of the Item</inlineHelpText>
        <label>UCSTOHDMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Other Indirect Costs of the PO Component</inlineHelpText>
        <label>podmdcst_ucstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Subcontracted labor Cost of the PO Component</inlineHelpText>
        <label>UCSTSUBLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Subcontract Material Cost of the PO Component</inlineHelpText>
        <label>UCSTSUBMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__podmdcst_wbs__c</fullName>
        <inlineHelpText>This is the WBS associated with this PO Component</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Component Cost</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>rstk__externalid__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__podmdcst_compitem__c</columns>
        <columns>rstk__podmdcst_seq__c</columns>
        <columns>rstk__podmdcst_invdiv__c</columns>
        <columns>rstk__podmdcst_invsite__c</columns>
        <columns>rstk__podmdcst_lotno__c</columns>
        <columns>rstk__podmdcst_lne__c</columns>
        <columns>rstk__podmdcst_ordno__c</columns>
        <columns>rstk__podmdcst_podmd__c</columns>
        <columns>rstk__podmdcst_qtyiss__c</columns>
        <columns>rstk__podmdcst_div__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_PO_Component_Cost</fullName>
        <columns>NAME</columns>
        <columns>rstk__podmdcst_div__c</columns>
        <columns>rstk__podmdcst_ordno__c</columns>
        <columns>rstk__podmdcst_lne__c</columns>
        <columns>rstk__podmdcst_compitem__c</columns>
        <columns>rstk__podmdcst_qtyiss__c</columns>
        <columns>rstk__podmdcst_lotno__c</columns>
        <columns>rstk__podmdcst_srlno__c</columns>
        <columns>rstk__podmdcst_podmd__c</columns>
        <columns>rstk__podmdcst_locid__c</columns>
        <columns>rstk__podmdcst_locnum__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Component Cost</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PODMDCST Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Component Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>